Update error handling

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -89,7 +89,7 @@ html {
         color: $dark-green;
       }
     }
-    .alert-warning {
+    #error {
       display: none;
       margin: 3%;
     }
