Update markup formatting

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -40,7 +40,7 @@ html {
         content: none;
         font-weight: 500;
       }
-      #source {
+      .source {
         font-style: italic;
         margin-top: 5%;
       }
@@ -56,18 +56,18 @@ html {
         color: $white;
       }
     }
-    #tweet,
-    #tweet:visited,
-    #tweet:active,
-    #tweet:focus {
+    .tweet,
+    .tweet:visited,
+    .tweet:active,
+    .tweet:focus {
       border-radius: 20px;
       font-weight: 500;
       letter-spacing: 1px;
       margin-top: 5%;
     }
-    #new-quote,
-    #new-quote:active,
-    #new-quote:focus {
+    .new-quote,
+    .new-quote:active,
+    .new-quote:focus {
       border-radius: 100%;
       margin-bottom: 5%;
       padding: 12px 14px;
