--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -1,6 +1,7 @@
 $dark-green: #0b6b74;
 $med-green: #0e818b;
-$light-green: #bef5fa;
+$med-light-green: #bef5fa;
+$light-green: #e7fbfd;
 $white: #fff;
 $black: #000;
 
@@ -16,6 +17,8 @@ $black: #000;
 html {
   height: 100%;
   body {
+    background: $white;
+    background: linear-gradient(120deg, rgba(190, 245, 250, 0.2), $white) fixed;
     color: $dark-green;
     min-height: 100%;
     padding-bottom: 60px;
@@ -28,7 +31,8 @@ html {
       margin: 6% 0 3%;
     }
     .well {
-      background-color: $light-green;
+      background: $med-light-green;
+      background: linear-gradient($med-light-green, $light-green) fixed;
       border: none;
       font-size: 1.2em;
       letter-spacing: 1px;
@@ -73,7 +77,8 @@ html {
       padding: 12px 14px;
     }
     footer {
-      background-color: $light-green;
+      background: $med-light-green;
+      background: linear-gradient(to right, $med-light-green, $light-green) fixed;
       bottom: 0;
       color: $black;
       font-size: 1.2rem;
