--- a/src/stylesheets/reset.scss
+++ b/src/stylesheets/reset.scss
@@ -46,6 +46,7 @@ a:visited,
 a:active,
 a:focus {
   color: inherit;
+  letter-spacing: inherit;
   text-decoration: none;
   &:hover {
     text-decoration: underline;
@@ -54,6 +55,7 @@ a:focus {
 
 span {
   color: inherit;
+  letter-spacing: inherit;
 }
 
 button,
