Add Sass color functions

--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -1,8 +1,4 @@
-$dark-green: #0b6b74;
-$med-green: #0e818b;
-$med-light-green: #bef5fa;
-$light-green: #e7fbfd;
-$white: #fff;
-$dark-gray: #333;
+$teal: #0b6b74;
+$grayscale: #000;
 $main-font: Helvetica, Arial, sans-serif;
 $heading-font: Calligraffitti, cursive;
