--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -1,5 +1,5 @@
-@import 'variables';
-@import 'reset';
+@import "variables";
+@import "reset";
 
 *:focus {
   box-shadow: 0 0 4px 4px rgba(65, 180, 250, 0.8);
@@ -7,10 +7,10 @@
 }
 
 html {
-  background: $white;
-  background: linear-gradient(120deg, rgba(190, 245, 250, 0.2), $white) fixed;
+  background: change-color($grayscale, $lightness: 100%);
+  background: linear-gradient(120deg, rgba(change-color($teal, $lightness: 86%), 0.2), change-color($grayscale, $lightness: 100%)) fixed;
   h1 {
-    color: $dark-green;
+    color: change-color($teal, $lightness: 25%);
     font-family: $heading-font;
     font-size: 1.7rem;
     font-weight: 900;
@@ -21,21 +21,21 @@ html {
   main {
     padding-bottom: 60px;
     .card {
-      background: $med-light-green;
-      background: linear-gradient($med-light-green, $light-green) fixed;
+      background: change-color($teal, $lightness: 86%);
+      background: linear-gradient(change-color($teal, $lightness: 86%), change-color($teal, $lightness: 95%)) fixed;
       border-radius: 5px;
       margin: 20px auto;
       max-width: 700px;
       padding: 20px;
       .quote,
       q {
-        color: $dark-green;
+        color: change-color($teal, $lightness: 25%);
         font-size: 1.1rem;
         font-weight: 600;
         line-height: 26px;
       }
       .source {
-        color: $dark-green;
+        color: change-color($teal, $lightness: 25%);
         font-style: italic;
         line-height: 20px;
         margin-top: 5%;
@@ -47,13 +47,13 @@ html {
         .tweet:visited,
         .tweet:active,
         .tweet:focus {
-          background: $med-green;
+          background: change-color($teal, $lightness: 30%);
           border-radius: 20px;
-          color: $white;
+          color: change-color($grayscale, $lightness: 100%);
           font-size: 0.8rem;
           padding: 8px 10px;
           &:hover {
-            background: $dark-green;
+            background: change-color($teal, $lightness: 25%);
             text-decoration: none;
           }
         }
@@ -62,19 +62,19 @@ html {
     .new-quote,
     .new-quote:active,
     .new-quote:focus {
-      background: $med-green;
+      background: change-color($teal, $lightness: 30%);
       border-radius: 100%;
-      color: $white;
+      color: change-color($grayscale, $lightness: 100%);
       margin-bottom: 5%;
       padding: 14px;
       &:hover {
-        background: $dark-green;
+        background: change-color($teal, $lightness: 25%);
       }
     }
   }
   footer {
-    background: $med-light-green;
-    background: linear-gradient(to right, $med-light-green, $light-green) fixed;
+    background: change-color($teal, $lightness: 86%);
+    background: linear-gradient(to right, change-color($teal, $lightness: 86%), change-color($teal, $lightness: 95%)) fixed;
     bottom: 0;
     font-size: 0.8rem;
     left: 0;
@@ -88,7 +88,7 @@ html {
     a:hover,
     a:active,
     a:focus {
-      color: $dark-green;
+      color: change-color($teal, $lightness: 25%);
     }
   }
 }
