--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -1,4 +1,4 @@
-$teal: #0b6b74;
-$grayscale: #000;
+$teal: hsl(185, 83%, 25%);
+$black: hsl(0, 0%, 0%);
 $main-font: Helvetica, Arial, sans-serif;
 $heading-font: Calligraffitti, cursive;
