--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -1,4 +1,6 @@
 $teal: hsl(185, 83%, 25%);
 $black: hsl(0, 0%, 0%);
-$main-font: Helvetica, Arial, sans-serif;
-$heading-font: Calligraffitti, cursive;
+$tweet-blue: #1b95e0;
+$tweet-blue-hover: #0c7abf;
+$error-red: hsl(349, 96%, 26%);
+$heading-font: Prata, serif;
