--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -53,7 +53,7 @@ button:focus {
 
 .message {
   border-radius: 5px;
-  margin: auto;
+  margin: 20px auto;
   max-width: 800px;
   padding: 15px 10px;
 }
@@ -111,6 +111,7 @@ html {
           text-align: right;
           .tweet,
           .tweet:visited,
+          .tweet:hover,
           .tweet:active,
           .tweet:focus {
             background: $tweet-blue;
