--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -1,83 +1,93 @@
 @import "variables";
 
-*:focus {
-  box-shadow: 0 0 4px 4px hsla(203, 95%, 62%, 0.8);
-  outline: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-top: 0;
-}
-
-a,
-a:visited,
-a:hover,
-a:active,
-a:focus {
-  color: $teal;
-  text-decoration: none;
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
-button,
-button:hover,
-button:active,
-button:focus {
-  border: 0;
-  cursor: pointer;
-}
-
-.button,
-.button:visited,
-.button:hover,
-.button:active,
-.button:focus {
-  background: change-color($teal, $lightness: 30%);
-  border-radius: 20px;
-  color: change-color($black, $lightness: 100%);
-  font-size: 1rem;
-  font-weight: 600;
-  padding: 10px 14px;
-  &:hover {
-    background: $teal;
-    text-decoration: none;
-  }
-}
-
-.message {
-  border-radius: 5px;
-  margin: 20px auto;
-  max-width: 800px;
-  padding: 15px 10px;
-}
-
 html {
-  background: change-color($black, $lightness: 100%);
-  background: linear-gradient(120deg, rgba(change-color($teal, $lightness: 86%), 0.2), change-color($black, $lightness: 100%)) fixed;
+  background: transparent;
   box-sizing: border-box;
   color: change-color($black, $lightness: 20%);
   height: 100%;
   letter-spacing: 1px;
   text-align: center;
   body {
+    background: change-color($black, $lightness: 100%);
+    background: linear-gradient(120deg, rgba(change-color($teal, $lightness: 86%), 0.2), change-color($black, $lightness: 100%)) fixed;
     min-height: 100%;
+    overscroll-behavior: none;
     padding: 0 20px;
     position: relative;
-    h1 {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      box-sizing: border-box;
+      margin-top: 0;
+    }
+    a,
+    a:visited,
+    a:hover,
+    a:active,
+    a:focus {
       color: $teal;
-      font-family: $heading-font;
-      font-size: 1.7rem;
-      font-weight: 900;
-      letter-spacing: 4px;
-      line-height: 1.45;
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+    div,
+    header,
+    main,
+    footer,
+    p,
+    button,
+    button:hover,
+    button:active,
+    button:focus {
+      box-sizing: border-box;
+    }
+    a:focus,
+    button:focus,
+    details:focus,
+    input:focus,
+    select:focus,
+    textarea:focus,
+    [tabindex]:focus {
+      box-shadow: 0 0 3px 3px hsla(203, 95%, 62%, 0.8);
+      outline: none;
+    }
+    .button,
+    .button:visited,
+    .button:hover,
+    .button:active,
+    .button:focus {
+      background: change-color($teal, $lightness: 30%);
+      border: 0;
+      border-radius: 20px;
+      color: change-color($black, $lightness: 100%);
+      cursor: pointer;
+      font-weight: 600;
+      padding: 10px 14px;
+      &:hover {
+        background: $teal;
+        text-decoration: none;
+      }
+    }
+    .message {
+      border-radius: 5px;
+      margin: 20px auto;
+      max-width: 800px;
+      padding: 15px 10px;
+    }
+    header {
       padding-top: 6%;
+      h1 {
+        color: $teal;
+        font-family: $heading-font;
+        font-size: 1.7rem;
+        font-weight: 900;
+        letter-spacing: 4px;
+        line-height: 1.45;
+      }
     }
     main {
       padding-bottom: 6rem;
@@ -93,7 +103,7 @@ html {
           color: $teal;
           font-size: 1.1rem;
           font-weight: 600;
-          line-height: 26px;
+          line-height: 1.48;
           quotes: none;
           &:before,
           &:after {
@@ -103,10 +113,10 @@ html {
         .source {
           color: $teal;
           font-style: italic;
-          line-height: 20px;
+          line-height: 1.3;
           margin-top: 5%;
         }
-        .tweet-div {
+        .tweet-container {
           margin-top: 8%;
           text-align: right;
           .tweet,
@@ -124,7 +134,6 @@ html {
             padding: 8px 10px;
             &:hover {
               background: $tweet-blue-hover;
-              text-decoration: none;
             }
           }
         }
