--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -1,5 +1,7 @@
 @import "variables";
 
+// BASE PAGE STYLES
+
 html {
   background: transparent;
   box-sizing: border-box;
@@ -14,135 +16,11 @@ html {
     overscroll-behavior: none;
     padding: 0 20px;
     position: relative;
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      box-sizing: border-box;
-      margin-top: 0;
-    }
-    a,
-    a:visited,
-    a:hover,
-    a:active,
-    a:focus {
-      color: $teal;
-      text-decoration: none;
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-    div,
-    header,
-    main,
-    footer,
-    p,
-    button,
-    button:hover,
-    button:active,
-    button:focus {
-      box-sizing: border-box;
-    }
-    a:focus,
-    button:focus,
-    details:focus,
-    input:focus,
-    select:focus,
-    textarea:focus,
-    [tabindex]:focus {
-      box-shadow: 0 0 3px 3px hsla(203, 95%, 62%, 0.8);
-      outline: none;
-    }
-    .button,
-    .button:visited,
-    .button:hover,
-    .button:active,
-    .button:focus {
-      background: change-color($teal, $lightness: 30%);
-      border: 0;
-      border-radius: 20px;
-      color: change-color($black, $lightness: 100%);
-      cursor: pointer;
-      font-weight: 600;
-      padding: 10px 14px;
-      &:hover {
-        background: $teal;
-        text-decoration: none;
-      }
-    }
-    .message {
-      border-radius: 5px;
-      margin: 20px auto;
-      max-width: 800px;
-      padding: 15px 10px;
-    }
     header {
       padding-top: 6%;
-      h1 {
-        color: $teal;
-        font-family: $heading-font;
-        font-size: 1.7rem;
-        font-weight: 900;
-        letter-spacing: 4px;
-        line-height: 1.45;
-      }
     }
     main {
       padding-bottom: 6rem;
-      .card {
-        background: change-color($teal, $lightness: 86%);
-        background: linear-gradient(change-color($teal, $lightness: 86%), change-color($teal, $lightness: 95%)) fixed;
-        border-radius: 5px;
-        margin: 20px auto;
-        max-width: 700px;
-        padding: 20px;
-        .quote,
-        .quote q {
-          color: $teal;
-          font-size: 1.1rem;
-          font-weight: 600;
-          line-height: 1.48;
-          quotes: none;
-          &:before,
-          &:after {
-            content: none;
-          }
-        }
-        .source {
-          color: $teal;
-          font-style: italic;
-          line-height: 1.3;
-          margin-top: 5%;
-        }
-        .tweet-container {
-          margin-top: 8%;
-          text-align: right;
-          .tweet,
-          .tweet:visited,
-          .tweet:hover,
-          .tweet:active,
-          .tweet:focus {
-            background: $tweet-blue;
-            border-radius: 4px;
-            color: change-color($black, $lightness: 100%);
-            font-family: "Helvetica Neue", sans-serif;
-            font-size: 13px;
-            font-weight: 500;
-            letter-spacing: 0;
-            padding: 8px 10px;
-            &:hover {
-              background: $tweet-blue-hover;
-            }
-          }
-        }
-      }
-      .error-message {
-        background: change-color($error-red, $lightness: 95%);
-        border: 1px solid change-color($error-red, $lightness: 90%);
-        color: $error-red;
-      }
     }
     footer {
       background: change-color($teal, $lightness: 86%);
@@ -156,5 +34,141 @@ html {
       right: 0;
       width: 100%;
     }
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      box-sizing: border-box;
+      margin-top: 0;
+    }
   }
+}
+
+// BASE ELEMENT STYLES
+
+div,
+header,
+main,
+footer,
+p,
+button,
+button:hover,
+button:active,
+button:focus {
+  box-sizing: border-box;
+}
+
+a,
+a:visited,
+a:hover,
+a:active,
+a:focus {
+  color: $teal;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+a:focus,
+button:focus,
+details:focus,
+input:focus,
+select:focus,
+textarea:focus,
+[tabindex]:focus {
+  box-shadow: 0 0 3px 3px hsla(203, 95%, 62%, 0.8);
+  outline: none;
+}
+
+.button,
+.button:visited,
+.button:hover,
+.button:active,
+.button:focus {
+  background: change-color($teal, $lightness: 30%);
+  border: 0;
+  border-radius: 20px;
+  color: change-color($black, $lightness: 100%);
+  cursor: pointer;
+  font-weight: 600;
+  padding: 10px 14px;
+  &:hover {
+    background: $teal;
+    text-decoration: none;
+  }
+}
+
+.message {
+  border-radius: 5px;
+  margin: 20px auto;
+  max-width: 800px;
+  padding: 15px 10px;
+}
+
+// SPECIFIC ELEMENT STYLES
+
+h1 {
+  color: $teal;
+  font-family: $heading-font;
+  font-size: 1.7rem;
+  font-weight: 900;
+  letter-spacing: 4px;
+  line-height: 1.45;
+}
+
+.card {
+  background: change-color($teal, $lightness: 86%);
+  background: linear-gradient(change-color($teal, $lightness: 86%), change-color($teal, $lightness: 95%)) fixed;
+  border-radius: 5px;
+  margin: 20px auto;
+  max-width: 700px;
+  padding: 20px;
+  .quote,
+  .quote q {
+    color: $teal;
+    font-size: 1.1rem;
+    font-weight: 600;
+    line-height: 1.48;
+    quotes: none;
+    &:before,
+    &:after {
+      content: none;
+    }
+  }
+  .source {
+    color: $teal;
+    font-style: italic;
+    line-height: 1.3;
+    margin-top: 5%;
+  }
+  .tweet-container {
+    margin-top: 8%;
+    text-align: right;
+    .tweet,
+    .tweet:visited,
+    .tweet:hover,
+    .tweet:active,
+    .tweet:focus {
+      background: $tweet-blue;
+      border-radius: 4px;
+      color: change-color($black, $lightness: 100%);
+      font-family: "Helvetica Neue", sans-serif;
+      font-size: 13px;
+      font-weight: 500;
+      letter-spacing: 0;
+      padding: 8px 10px;
+      &:hover {
+        background: $tweet-blue-hover;
+      }
+    }
+  }
+}
+
+.error-message {
+  background: change-color($error-red, $lightness: 95%);
+  border: 1px solid change-color($error-red, $lightness: 90%);
+  color: $error-red;
 }
