--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -105,6 +105,7 @@ textarea:focus,
 
 .message {
   border-radius: 5px;
+  line-height: 1.55;
   margin: 20px auto;
   max-width: 800px;
   padding: 15px 10px;
