Use CSS and JS on all routes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,6 @@
     </header>
     <div id="app"></div>
     <%- include ('./partials/footer') -%>
-    <script src="public/bundle.js"></script>
+    <script src="/public/bundle.js"></script>
   </body>
 </html>
