Refactor React components

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,9 @@
     <header>
       <h1><%= mainHeading %></h1>
     </header>
-    <div id="app"></div>
+    <main>
+      <div id="app"></div>
+    </main>
     <%- include ('./partials/footer') -%>
     <script src="/public/bundle.js"></script>
   </body>
