--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -122,7 +122,7 @@ h1 {
   line-height: 1.45;
 }
 
-.card {
+.quote-container {
   background: change-color($teal, $lightness: 86%);
   background: linear-gradient(change-color($teal, $lightness: 86%), change-color($teal, $lightness: 95%)) fixed;
   border-radius: 5px;
