Fix link to js file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,6 @@
       <div id="app"></div>
     </main>
     <%- include ('./partials/footer') -%>
-    <script src="/public/bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
