Add a noscript tag

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,5 +10,8 @@
     </main>
     <%- include ('./partials/footer') -%>
     <script src="/bundle.js"></script>
+    <noscript>
+      <p>This site uses JavaScript. Please enable JavaScript in your browser.</p>
+    </noscript>
   </body>
 </html>
