Style noscript tag

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <%- include ('./partials/footer') -%>
     <script src="/bundle.js"></script>
     <noscript>
-      <p>This site uses JavaScript. Please enable JavaScript in your browser.</p>
+      <p class="message info-message"><span class="fa fa-info-circle fa-lg fa-fw"></span> This site uses JavaScript. Please enable JavaScript in your browser.</p>
     </noscript>
   </body>
 </html>
