--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -3,4 +3,5 @@ $black: hsl(0, 0%, 0%);
 $tweet-blue: #1b95e0;
 $tweet-blue-hover: #0c7abf;
 $error-red: hsl(349, 96%, 26%);
+$info-blue: hsl(204, 100%, 26%);
 $heading-font: Prata, serif;
