--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Prata;
+  src: url(../assets/fonts/Prata-Regular.ttf);
+}
+
 @import "variables";
 
 // BASE PAGE STYLES
