--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,6 +1,15 @@
 // STYLES FOR PAGE'S MAIN CONTENT
 
 // Button styles
+.button-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
 .button,
 .button:visited,
 .button:hover,
@@ -15,10 +24,8 @@
   line-height: normal;
   padding: 10px 14px;
   text-decoration: none;
-  width: auto;
   &:hover {
     background: $teal;
-    text-decoration: none;
   }
 }
 
