--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -59,6 +59,7 @@ html {
       color: $teal;
       font-family: $heading-font;
       font-size: 1.7rem;
+      font-weight: 400;
       letter-spacing: 4px;
       line-height: 1.45;
     }
